--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
 <body>
     <form action="" id="searchForm">
         <h1 class="text-4xl font-bold mb-5">Movie Search</h1>
-        <input type="text" placeholder="Tv Show Title" name="query">
-        <a href="#_" class="relative inline-block px-4 py-2 font-medium group my-1">
-            <span
-                class="absolute inset-0 w-full h-full transition duration-200 ease-out transform translate-x-1 translate-y-1 bg-black group-hover:-translate-x-0 group-hover:-translate-y-0"></span>
-            <span class="absolute inset-0 w-full h-full bg-white border-2 border-black group-hover:bg-black"></span>
-            <span class="relative text-black group-hover:text-white">Search</span>
-        </a>
+        <input type="text" placeholder="Search Title" name="query">
+        <button><a href="#_" class="relative inline-block px-4 py-2 font-medium group my-1">
+                <span
+                    class="absolute inset-0 w-full h-full transition duration-200 ease-out transform translate-x-1 translate-y-1 bg-black group-hover:-translate-x-0 group-hover:-translate-y-0"></span>
+                <span class="absolute inset-0 w-full h-full bg-white border-2 border-black group-hover:bg-black"></span>
+                <span class="relative text-black group-hover:text-white submit">Search</span>
+            </a></button>
+
     </form>
 </body>
 <script src="app.js"></script>
