--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <form action="" id="searchForm">
-        <h1 class="text-4xl font-bold mb-5">Movie Search</h1>
+        <h1 class="text-4xl font-bold font-sans mb-5">Movie Search</h1>
         <input type="text" placeholder="Search Title" name="query">
         <button><a href="#_" class="relative inline-block px-4 py-2 font-medium group my-1">
                 <span
