--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body>
+<body class="m-0 bg-black">
     <form action="" id="searchForm">
-        <h1 class="text-4xl font-bold font-sans mb-5">Movie Search</h1>
-        <input type="text" placeholder="Search Title" name="query">
-        <button><a href="#_" class="relative inline-block px-4 py-2 font-medium group my-1">
+        <h1 class="text-7xl font-bold font-sans mb-5">Movie Search</h1>
+        <input class="pl-5 bg-transparent" type="text" placeholder="Search Title" name="query">
+        <button><a href="#_" class="relative inline-block px-4 py-2 font-medium group my-5">
                 <span
                     class="absolute inset-0 w-full h-full transition duration-200 ease-out transform translate-x-1 translate-y-1 bg-black group-hover:-translate-x-0 group-hover:-translate-y-0"></span>
                 <span class="absolute inset-0 w-full h-full bg-white border-2 border-black group-hover:bg-black"></span>
