--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="m-0 bg-black">
+<body class="m-0 bg-black text-white">
     <form action="" id="searchForm">
         <h1 class="text-7xl font-bold font-sans mb-5">Movie Search</h1>
         <input class="pl-5 bg-transparent" type="text" placeholder="Search Title" name="query">
