--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="m-0 bg-black text-white">
-    <form action="" id="searchForm">
-        <h1 class="text-7xl font-bold font-sans mb-5">Movie Search</h1>
-        <input class="pl-5 bg-transparent" type="text" placeholder="Search Title" name="query">
-        <button><a href="#_" class="relative inline-block px-4 py-2 font-medium group my-5">
-                <span
-                    class="absolute inset-0 w-full h-full transition duration-200 ease-out transform translate-x-1 translate-y-1 bg-black group-hover:-translate-x-0 group-hover:-translate-y-0"></span>
-                <span class="absolute inset-0 w-full h-full bg-white border-2 border-black group-hover:bg-black"></span>
-                <span class="relative text-black group-hover:text-white submit">Search</span>
-            </a></button>
+<body class="m-0 bg-black text-white flex flex-col items-center min-h-screen"></body>">
+<form action="" id="searchForm" class="w-full max-w-lg p-5">
+    <h1 class="text-7xl font-bold font-sans mb-8 text-center">Movie Search</h1>
+    <input class="pl-5 bg-transparent" type="text" placeholder="Search Title" name="query">
+    <button><a href="#_" class="relative inline-block px-4 py-2 font-medium group my-5">
+            <span
+                class="absolute inset-0 w-full h-full transition duration-200 ease-out transform translate-x-1 translate-y-1 bg-black group-hover:-translate-x-0 group-hover:-translate-y-0"></span>
+            <span class="absolute inset-0 w-full h-full bg-white border-2 border-black group-hover:bg-black"></span>
+            <span class="relative text-black group-hover:text-white submit">Search</span>
+        </a></button>
 
-    </form>
+</form>
+<div id="resultsContainer" class="w-full max-w-4xl p-5 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8"></div>
 </body>
 <script src="app.js"></script>
 
