--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             </a></button>
 
     </form>
+    <div id="resultsContainer" class="w-full max-w-4xl p-5 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8"></div>
 </body>
 <script src="app.js"></script>
 
